# vigil

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.unsecure  PACKAGING.md  PROTOCOL.md  README.md  config.cfg  tmp_file
.github/: dependabot.yml
.github/workflows/: build.yml  chart.yml  test.yml
charts/vigil/: Chart.yaml  README.md  values.yaml
charts/vigil/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/vigil/templates/tests/: test-connection.yaml
debian/: changelog  control  copyright  rules  vigil.install  vigil.postinst  vigil.service
dev/designs/: status_page.sketch
dev/workspaces/: manager.paw  reporter.paw
examples/config/: systemd.service
res/assets/javascripts/: index.js
res/assets/stylesheets/: common.css  index.css
res/assets/templates/: index.tera
scripts/: build_packages.sh  release_binaries.sh  sign_binaries.sh
scripts/release/: release_binaries.sh
src/: main.rs
src/aggregator/: manager.rs
src/config/: config.rs  defaults.rs  logger.rs  mod.rs  reader.rs  regex.rs
src/notifier/: email.rs  generic.rs  gotify.rs  mailgun.rs  matrix.rs  mod.rs  opsgenie.rs  pushover.rs  slack.rs  telegram.rs  twilio.rs  webex.rs  webhook.rs  xmpp.rs  zulip.rs
src/prober/: manager.rs  mod.rs  mode.rs  replica.rs  report.rs  states.rs  status.rs
src/responder/: announcements.rs  asset_file.rs  context.rs  manager.rs  mcp.rs  mod.rs  payload.rs  reporter_guard.rs  request_payload.rs  routes.rs  server.rs
