[package]
name = "vigil-server"
version = "1.23.0"
description = "Microservices Status Page. Monitors a distributed infrastructure and sends alerts (Slack, SMS, etc.)."
readme = "README.md"
license = "MPL-2.0"
edition = "2021"
homepage = "https://github.com/valeriansaliou/vigil"
repository = "https://github.com/valeriansaliou/vigil.git"
keywords = ["microservices", "infrastructure", "status", "monitor", "slack"]
categories = ["web-programming"]
authors = ["Valerian Saliou <valerian@valeriansaliou.name>"]
exclude = ["dev/*"]

[[bin]]
name = "vigil"
path = "src/main.rs"
doc = false

[dependencies]
log = { version = "0.4", features = ["std"] }
clap = { version = "3.0", features = ["std", "cargo"] }
lazy_static = "1.4"
time = { version = "0.3", features = ["formatting"] }
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
base64 = "0.13"
regex = "1.5"
url = { version = "2.1", default-features = false }
url_serde = { version = "0.2", default-features = false }
http = "0.2"
http-serde = "1.0"
indexmap = { version = "1.3", features = ["serde-1"] }
actix-web = { version = "3.3", default-features = false }
actix-files = "0.5"
actix-web-httpauth = "0.5"
tera = { version = "1.6", default-features = false }
native-tls = { version = "0.2", features = ["vendored"] }
openssl-probe = "0.1"
reqwest = { version = "0.11", features = ["native-tls-vendored", "gzip", "blocking", "json"], default-features = false }
ping = "0.4"
run_script = "0.9"
lettre = { version = "0.9", features = ["smtp-transport"], optional = true }
lettre_email = { version = "0.9", optional = true }
libstrophe = { version = "0.16", default-features = false, optional = true }

[features]
default = ["notifier-email", "notifier-twilio", "notifier-slack", "notifier-zulip", "notifier-telegram", "notifier-pushover", "notifier-gotify", "notifier-matrix", "notifier-webhook", "notifier-webex"]
notifier-email = ["lettre", "lettre_email"]
notifier-twilio = []
notifier-slack = []
notifier-zulip = []
notifier-telegram = []
notifier-pushover = []
notifier-gotify = []
notifier-matrix = []
notifier-webhook = []
notifier-webex = []
notifier-xmpp = ["libstrophe"]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true

[profile.release]
opt-level = "s"
lto = true
debug = false
debug-assertions = false
panic = "abort"
