[package]
name = "vigil-server"
version = "1.27.0"
description = "Microservices Status Page. Monitors a distributed infrastructure and sends alerts (Slack, SMS, etc.)."
readme = "README.md"
license = "MPL-2.0"
edition = "2021"
homepage = "https://github.com/valeriansaliou/vigil"
repository = "https://github.com/valeriansaliou/vigil.git"
keywords = ["microservices", "infrastructure", "status", "monitor", "slack"]
categories = ["web-programming"]
authors = ["Valerian Saliou <valerian@valeriansaliou.name>"]
exclude = ["dev/*"]

[[bin]]
name = "vigil"
path = "src/main.rs"
doc = false

[dependencies]
log = { version = "0.4", features = ["std"] }
clap = { version = "4.3", features = ["std", "cargo"] }
lazy_static = "1.4"
time = { version = "0.3", features = ["formatting"] }
serde = "1.0"
serde_derive = "1.0"
toml = "0.9"
envsubst = "0.2"
uuid = { version = "1.1", features = ["v4", "fast-rng"], default-features = false }
regex = "1.6"
url = { version = "2.2", default-features = false }
url_serde = { version = "0.2", default-features = false }
http = "1.3"
http-serde = "2.1"
indexmap = { version = "2.11", features = ["serde"] }
actix-web = "4.3"
actix-files = "0.6"
actix-web-httpauth = "0.8"
tera = { version = "1.19", default-features = false }
native-tls = { version = "0.2", features = ["vendored"] }
openssl-probe = "0.1"
reqwest = { version = "0.12", features = ["native-tls-vendored", "gzip", "blocking", "json"], default-features = false }
ping = "0.6"
run_script = "0.11"
lettre = { version = "0.10", features = ["smtp-transport", "native-tls", "hostname", "builder"], default-features = false, optional = true }
libstrophe = { version = "0.17", optional = true }

[features]
default = ["notifier-email", "notifier-twilio", "notifier-slack", "notifier-zulip", "notifier-telegram", "notifier-pushover", "notifier-gotify", "notifier-matrix", "notifier-webex", "notifier-webhook"]
notifier-email = ["lettre"]
notifier-twilio = []
notifier-slack = []
notifier-zulip = []
notifier-telegram = []
notifier-pushover = []
notifier-gotify = []
notifier-matrix = []
notifier-webex = []
notifier-webhook = []
notifier-xmpp = ["libstrophe"]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true

[profile.release]
opt-level = "s"
lto = true
debug = false
debug-assertions = false
panic = "abort"
strip = true
